<resources>
    <string name="app_name">AKUH Sample App</string>

    <string name="btn_log_messages">Log Messages</string>
    <string name="btn_log_error">Log Error Exception</string>
    <string name="btn_log_debug">Log Debug Exception</string>
    <string name="btn_log_info">Log Info Exception</string>
    <string name="btn_log_verbose">Log Verbose Exception</string>
    <string name="btn_log_warn">Log Warn Exception</string>

    <string name="btn_device_stats">Device Stats</string>
    <string name="btn_check_network">Check Network Status</string>
    <string name="btn_check_gps">Check GPS Module</string>
    <string name="btn_check_gyro">Check Gyro Scope</string>
    <string name="btn_check_front_cam">Check Front Camera</string>
    <string name="btn_check_flash">Check Flash</string>

    <string name="btn_alerts">Alerts</string>
    <string name="btn_snackbars">Snackbars</string>
    <string name="btn_default_snackbar">Default Style</string>
    <string name="btn_alert_snackbar">Alert Style</string>
    <string name="btn_success_snackbar">Success Style</string>
    <string name="btn_info_snackbar">Info Style</string>
    <string name="btn_custom_snackbar">Custom Style</string>
    <string name="btn_fonts">Set Fonts</string>
    <string name="btn_texts">Text Utilities</string>
    <string name="btn_date_formats">Date Formats</string>
    <string name="btn_action_events">Action &amp; Events</string>
    <string name="btn_action_app_utilities">App Utilities</string>

    <string name="lbl_red">RED</string>
    <string name="lbl_green">GREEN</string>
    <string name="lbl_blue">BLUE</string>
    <string name="lbl_alpha">ALPHA</string>
    <string name="lbl_log_message">Open logcat to view log</string>
    <string name="lbl_font_osl">Open Sans Light</string>
    <string name="lbl_font_osr">Open Sans Regular</string>
    <string name="lbl_font_osb">Open Sans Bold</string>
    <string name="lbl_font_rl">Roboto Light</string>
    <string name="lbl_font_rr">Roboto Regular</string>
    <string name="lbl_font_rb">Roboto Bold</string>
    <string name="lbl_line_1">Single Line</string>
    <string name="lbl_line_2">Font Setup</string>
    <string name="lbl_line_3">For All</string>
    <string name="lbl_line_4">These</string>

    <string name="msg_font_by_id">FONTS SET DIRECTLY BY VIEW ID</string>
    <string name="msg_font_by_view">FONTS SET BY VIEW OBJECTS</string>
    <string name="msg_long_text">Here is the long text to display the customised text styling. With AKUAH you can style your textview with underline, bold, italic, resize, strikethrough, superscript, subscript, foreground-color and background-color. \n\nIn addition you can also implement click event on your textview.</string>

    <string name="btn_action_shake">Shake Action</string>

    <string name="btn_action_update_checker">Update Checker</string>
    <string name="hint_update_package">Enter package name</string>
    <string name="hint_update_version">Enter app version</string>
    <string name="btn_check_for_update">Check for update</string>
    <string name="btn_check_app_update">Check this app update</string>

    <string name="btn_action_rating">Show Rating Dialog</string>

    <string name="rating_title">Like our app ?</string>
    <string name="rating_message">Care for a feedback ?</string>
    <string name="rating_btn_accept">Yeah Sure</string>
    <string name="rating_btn_cancel">Never</string>
    <string name="rating_btn_later">Not Now</string>
    <integer name="rating_after_every">3</integer>
</resources>
