<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ak.andro.kumaraakash86.akuhsampleapp.samples.FontActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_font_by_id"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tv_os_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_font_osl"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_os_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_font_osr"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_os_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_font_osb"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_font_by_view"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/tv_roboto_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_font_rl"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_roboto_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_font_rr"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_roboto_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_font_rb"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="#2d2d2d"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_multi_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_line_1"
            android:textSize="15sp"
            android:background="#dcdcdc"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/tv_multi_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_line_2"
            android:textSize="15sp"
            android:background="#a9a9a9"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/tv_multi_text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_line_3"
            android:background="#dcdcdc"
            android:textSize="15sp"
            android:padding="10dp"/>
        <TextView
            android:id="@+id/tv_multi_text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_line_4"
            android:textSize="15sp"
            android:background="#a9a9a9"
            android:padding="10dp"/>
    </LinearLayout>
</LinearLayout>
