<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ak.andro.kumaraakash86.akuhsampleapp.MainActivity">

    <Button
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_log_messages"
        android:onClick="ActionClick"/>

    <Button
        android:id="@+id/btn_device_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_device_stats"
        android:onClick="ActionClick"/>
    <Button
        android:id="@+id/btn_alerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_alerts"
        android:onClick="ActionClick"/>
    <Button
        android:id="@+id/btn_fonts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_fonts"
        android:onClick="ActionClick"/>
    <Button
        android:id="@+id/btn_texts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_texts"
        android:onClick="ActionClick"/>
    <Button
        android:id="@+id/btn_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_date_formats"
        android:onClick="ActionClick"/>
    <Button
        android:id="@+id/btn_action_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_action_events"
        android:onClick="ActionClick"/>
    <Button
        android:id="@+id/btn_action_app_utilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_action_app_utilities"
        android:onClick="ActionClick"/>
</LinearLayout>
