<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_default_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="ActionClick"
            android:text="@string/btn_default_snackbar" />

        <Button
            android:id="@+id/btn_alert_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="ActionClick"
            android:text="@string/btn_alert_snackbar" />

        <Button
            android:id="@+id/btn_success_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="ActionClick"
            android:text="@string/btn_success_snackbar" />

        <Button
            android:id="@+id/btn_info_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="ActionClick"
            android:text="@string/btn_info_snackbar" />
        <Button
            android:id="@+id/btn_custom_snackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="ActionClick"
            android:text="@string/btn_custom_snackbar" />

        <include layout="@layout/color_layout" android:layout_width="match_parent" android:layout_height="wrap_content"></include>

    </LinearLayout>
</ScrollView>