<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/btn_check_network_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ActionClick"
        android:tag="ns"
        android:text="@string/btn_check_network"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/btn_check_gps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ActionClick"
        android:tag="cgps"
        android:text="@string/btn_check_gps"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/btn_check_gyro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ActionClick"
        android:tag="gyro"
        android:text="@string/btn_check_gyro"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/btn_check_front_cam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ActionClick"
        android:tag="fcam"
        android:text="@string/btn_check_front_cam"
        android:layout_marginTop="10dp"
        />
</LinearLayout>